--- a/src/SampleWebApp/appsettings.json
+++ b/src/SampleWebApp/appsettings.json
@@ -6,5 +6,19 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Information"
+    },
+    "WriteTo:0": {
+      "Name": "Kafka",
+      "Args": {
+        "batchSizeLimit": "50",
+        "period": "5",
+        "bootstrapServers": "localhost:9092",
+        "topic": "logs"
+      }
+    }
+  }
 }
