--- a/src/SeungYongShim.Proto.OpenTelemetry.Kafka/SeungYongShim.Proto.OpenTelemetry.Kafka.csproj
+++ b/src/SeungYongShim.Proto.OpenTelemetry.Kafka/SeungYongShim.Proto.OpenTelemetry.Kafka.csproj
@@ -1,11 +1,11 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
   <Import Project="../common.props" />
   <PropertyGroup>
     <TargetFramework>net5</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Proto.Persistence" Version="0.17.0" />
-    <PackageReference Include="SeungYongShim.Kafka" Version="1.3.0" />
+    <PackageReference Include="SeungYongShim.Kafka" Version="2.2.0" />
   </ItemGroup>
 
 </Project>
